0.5.1 (2011-11-13)
------------------

- Fixed a bug where the mailer was only sending email to addresses in
  the "TO" field.

0.5 (2011-10-24)
----------------

- Drop Lamson dependency by copying Lamson's MailResponse and dependent code
  into ``pyramid_mailer.response``.

0.4.X
-----

- ``pyramid_mailer.includeme`` function added for
  ``config.include('pyramid_mailer')`` support

- ``pyramid_mailer.testing`` module added for
  ``config.include('pyramid_mailer.testing')`` support.

- ``pyramid_mailer.get_mailer`` API added (see docs).

- ``pyramid_mailer.interfaces`` module readded (with marker IMailer interface
  for ZCA registration).

- ``setup.cfg`` added with coverage parameters to allow for ``setup.py
  nosetests --with-coverage``.